fix(#1118): ColorArea fix z-index for handle and loupe

--- a/packages/@adobe/spectrum-css-temp/components/colorarea/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/colorarea/index.css
@@ -30,7 +30,7 @@
   user-select: none;
 
   &.is-focused,
-  &.focus-ring {
+  &:focus-within {
     z-index: 2;
 
     .spectrum-ColorArea-handle {
